Make sure page looks fine on small phones

--- a/app/components/RecruitmentFooter/styles.css
+++ b/app/components/RecruitmentFooter/styles.css
@@ -41,6 +41,13 @@
   }
 }
 
+@media (max-width: 360px) {
+  .buttonContainer > p {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 .applicationInfo {
   margin-top: 19px;
 }
